--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">esses são meus amigos?</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="cult_brave.jpg" alt=>8
             <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="alana.jpeg" alt="foto do marcelo">
