--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="cult_brave.jpg" alt=>8
+            <img class="estudante-imagem" src="cult_brave.jpg" alt=>
             <h3 class="estudante-nome">alana</h3>
             
         </div>
