--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="alana.jpeg" alt=>
+            <img class="estudante-imagem" src="joice.jpeg" alt=>
             <h3 class="estudante-nome">joice</h3>
             
         </div>
