--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="joice.jpeg" alt=>
-            <h3 class="estudante-nome">joice</h3>
+            <h3 class="estudante-nome">Eu</h3>
             
         </div>
        
