--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola é um lugar em que eu fiz varios amigos, eu já vivi varios momentos incriveis </p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série. Nós somos super unidos e a turma favorita por quase todos os professores e professoras que nos ajudam!</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
