--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="estudante-titulo">esses são meus amigos?</h2>
         <div class="estudante-todos">
         <span></span>
-            <div class="estudante-div">
+            <div class="estudante-div"> </div>
             <img class="estudante-imagem" src="cult_brave.jpg" alt=>
             <h3 class="estudante-nome">alana, mimha melhor </h3>
             
