--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <h2 class="estudante-titulo">esses são meus amigos?</h2>
         <div class="estudante-todos">
         <span></span>
-            <div class="estudante-div"> </div>
+            <div class="estudante-div">
             <img class="estudante-imagem" src="cult_brave.jpg" alt=>
             <h3 class="estudante-nome">alana, ela gosta de jogar volei, gosta de ajudar as pessoa é bastante carinhosa
             gosta de acampar e ela tem 15 anos e é minha melhor amiga. </h3>
             
         </div>
-        <div class="estudante-div"> </div>
+        <div class="estudante-div">
         <img class="estudante-imagem" src="joice.jpeg" alt=>
         <h3 class="estudante-nome">Eu, eu sou uma pessoa bastante gentil </h3>
             
         </div>
 </div>
-    <div class="estudante-div"> </div>
+    <div class="estudante-div">
     <img class="estudante-imagem" src="karol.jpg" alt=>
     <h3 class="estudante-nome">Karol,ela gosta de dormi gosta de jogar volei gosta de fumar e é
          minha amiga de anos, ela é muito gentil ela tem 16 anos. </h3>
