--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="joice.jpeg" alt=>
-        <h3 class="estudante-nome">Eu, eu sou uma pessoa bastante gentil </h3>
+        <h3 class="estudante-nome">Eu, eu sou uma pessoa bastante gentil, eu gosto
+            de jogar volei e tenho 16 anos e eu trabalho, e gosto de dormi. </h3>
             
         </div>
 </div>
