--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
          minha amiga de anos, ela é muito gentil ela tem 16 anos. </h3>
        
     </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="diego.jpeg" alt=>
+        <h3 class="estudante-nome">Diego, ele é uma pessoa bastante sincera ele gosta de  </h3>
+           
+        </div>
     </section>
 </body>
 </html>
