--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </div>
     <div class="estudante-div">
         <img class="estudante-imagem" src="diego.jpeg" alt=>
-        <h3 class="estudante-nome">Diego, ele é uma pessoa bastante sincera ele gosta de  </h3>
+        <h3 class="estudante-nome">Diego, ele é uma pessoa bastante sincera ele gosta de jogar futebol
+             e volei,e é bem gente boa.  </h3>
            
         </div>
     </section>
